Minor fix to blockly icon vertical alignment. Revert to middle alignment.

--- a/theme/blockly-core.less
+++ b/theme/blockly-core.less
@@ -162,7 +162,7 @@ span.blocklyTreeIcon {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     backface-visibility: hidden;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     height: 100%;
     display: none;
 }
@@ -171,58 +171,58 @@ span.blocklyTreeIcon {
 }
 .blocklyTreeIcon.blocklyTreeIconsearch::before {
     content: "\f002";
-    vertical-align: top;
+    vertical-align: middle;
 }
 .blocklyTreeIcon.blocklyTreeIconDefault::before {
     content: "\f12e";
-    vertical-align: top;
+    vertical-align: middle;
 }
 .blocklyTreeIcon.blocklyTreeIconadvancedcollapsed::before {
     content: "\f078";
-    vertical-align: top;
+    vertical-align: middle;
 }
 .blocklyTreeIcon.blocklyTreeIconadvancedexpanded::before {
     content: "\f077";
-    vertical-align: top;
+    vertical-align: middle;
 }
 .blocklyTreeIcon.blocklyTreeIconmore::before {
     content: "\f141";
-    vertical-align: top;
+    vertical-align: middle;
 }
 .blocklyTreeIcon.blocklyTreeIconaddpackage::before {
     content: "\f055";
-    vertical-align: top;
+    vertical-align: middle;
 }
 .blocklyTreeIcon.blocklyTreeIconloops::before {
     content: "\f01e";
-    vertical-align: top;
+    vertical-align: middle;
 }
 .blocklyTreeIcon.blocklyTreeIconmath::before {
     content: "\f1ec";
-    vertical-align: top;
+    vertical-align: middle;
 }
 .blocklyTreeIcon.blocklyTreeIconlogic::before {
     content: "\f074";
-    vertical-align: top;
+    vertical-align: middle;
 }
 .blocklyTreeIcon.blocklyTreeIconvariables::before {
     content: "\f039";
-    vertical-align: top;
+    vertical-align: middle;
 }
 .blocklyTreeIcon.blocklyTreeIcontext::before {
     content: "\f035";
-    vertical-align: top;
+    vertical-align: middle;
 }
 .blocklyTreeIcon.blocklyTreeIconarrays::before {
     content: "\f0cb";
-    vertical-align: top;
+    vertical-align: middle;
 }
 .blocklyTreeIcon.blocklyTreeIconfunctions {
     font-family: xicon !important;
 }
 .blocklyTreeIcon.blocklyTreeIconfunctions::before {
     content: "\f107";
-    vertical-align: top;
+    vertical-align: middle;
 }
 .blocklyFlyoutLabelIcon.blocklyFlyoutIconfunctions {
     font-family: xicon !important;
@@ -303,7 +303,6 @@ span.blocklyTreeIcon {
     }
     span.blocklyTreeIcon {
         line-height: @blocklyRowHeightMobile;
-        font-size: 1.5rem;
     }
     #blocklyTrashIcon {
         width: @blocklyRowWidthMobile;
@@ -360,8 +359,5 @@ span.blocklyTreeIcon {
     /* Hide the blockly toolbox search */
     #blocklySearchArea {
         display: none !important;
-    }    
-    span.blocklyTreeIcon {
-        vertical-align: top !important;
     }
 }
